feat: swagger & makefile
